--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,12 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-1.jpg" alt="Ноутбук с изображениями трех портфолио" width="370" height="294" />
+                            <p class="portfolio-card-text">Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Технокряк</h2>
                                 <p class="portfolio-after-titles">Веб-сайт</p>
@@ -70,10 +75,14 @@
                         </a>
                     </div>
                 </li>
-                <li class="portfolio-item">
+                <li class="portfolio-item"> 
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-2.jpg" alt="Два баскетболиста в прыжке" width="370" height="294" />
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A ab neque aperiam labore repellat corrupti iure nemo,
+                                distinctio quaerat, accusamus laudantium odit reiciendis delectus eum.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Постер<span lang="en"> Orlean vs Golden Star</span></h2>
                                 <p class="portfolio-after-titles">Дизайн</p>
@@ -84,7 +93,11 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-3.jpg" alt="Логотип ресторана Seafood" width="370" height="294" />
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt totam exercitationem molestias, eveniet sequi,
+                                laudantium velit qui impedit quisquam in? Ipsam, doloremque molestias! Blanditiis, ex accusamus.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Ресторан<span lang="en"> Seafood</span></h2>
                                 <p class="portfolio-after-titles">Приложение</p>
@@ -95,7 +108,12 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-4.jpg" alt="Черные наушники" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Corporis amet odio quidem asperiores voluptatem aliquam laudantium dolores omnis,
+                                excepturi sint ea nostrum repudiandae et reiciendis.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Проект<span lang="en"> Prime</span></h2>
                                 <p class="portfolio-after-titles">Маркетинг</p>
@@ -106,7 +124,12 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-5.jpg" alt="Лежат две коробки белого и коричневого цвета с надписями и логотипами" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Corporis amet odio quidem asperiores voluptatem aliquam laudantium dolores omnis,
+                                excepturi sint ea nostrum repudiandae et reiciendis accusamus id aperiam voluptate.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Проект<span lang="en"> Boxes</span></h2>
                                 <p class="portfolio-after-titles">Приложение</p>
@@ -117,7 +140,11 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-6.jpg" alt="Монитор с изображением веб-сайта" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam sequi, impedit quaerat consectetur eum tenetur ea,
+                                et reiciendis voluptas deleniti eligendi inventore asperiores ratione ipsum.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles" lang="en">Inspiration has no Borders</h2>
                                 <p class="portfolio-after-titles">Веб-сайт</p>
@@ -128,7 +155,11 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-7.jpg" alt="Раскрытый журнал с дизайном в голубо-бело-серых тонах" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut perspiciatis ex fugit optio! Quis, quam! Inventore, nemo fuga! 
+                                Veritatis necessitatibus minus quo quibusdam esse voluptatibus.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Издание<span lang="en"> Limited Edition</span></h2>
                                 <p class="portfolio-after-titles">Дизайн</p>
@@ -139,7 +170,11 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-8.jpg" alt="Бирка с надписью: LAB EL TAG" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quae repudiandae, 
+                                minima reprehenderit eius autem iste quod amet rerum, officia, sed labore alias eligendi nemo!</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles">Проект<span lang="en"> LAB</span></h2>
                                 <p class="portfolio-after-titles">Маркетинг</p>
@@ -150,7 +185,12 @@
                 <li class="portfolio-item">
                     <div class="portfolio-card">
                         <a class="link" href="https://irynakozhukh.github.io/goit-markup-hw-05/portfolio.html">
+                            <div class="cadr-overflow">
                             <img class="images" src="./images/img-9.jpg" alt="Ноутбук с изображением веб-сайта Growing Business" width="370" height="294"/>
+                            <p class="portfolio-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Voluptate, architecto et voluptas odio voluptates doloribus optio illum facilis nam explicabo distinctio. 
+                                Quam nemo sapiente enim.</p>
+                            </div>
                             <div class="card-body">
                                 <h2 class="portfolio-titles" lang="en">Growing Business</h2>
                                 <p class="portfolio-after-titles">Приложение</p>
