--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="hero section">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero-btn" type="button">Заказать услугу</button>
+                <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
 
@@ -435,7 +435,16 @@
             </div>
         </div>
     </footer>
-
+<div class="backdrop is-hidden" data-modal>
+<div class="modal is-hidden" data-form-modal>
+    <button type="button" class="modal-close" data-modal-close>
+        <svg class="close-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+</div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
